--- a/src/style.css
+++ b/src/style.css
@@ -5,12 +5,20 @@
 }
 
 #content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url('./hero-image.jpg') center;
   height: 100vh;
   width: 100hv;
 }
 
 .hero-content {
-  background: url('./hero-image.jpg');
-  height: 100%;
-  width: 100%;
+  color: #fff;
+  font-size: 56px;
+  text-transform: uppercase;
+  text-align: center;
+  text-shadow: 3px 3px 15px #000;
+  letter-spacing: 0.1rem;
+  font-family: 'Anton', sans-serif;
 }
