--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@ font-family: 'Roboto', sans-serif; */
   margin: 0;
 }
 
+header {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+}
+
 #content {
   display: flex;
   justify-content: center;
@@ -34,19 +39,29 @@ header {
 }
 
 nav {
+  display: flex;
   height: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 20%;
+  height: 50px;
+  border-radius: 5px;
 }
 
 .nav-options {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
+  width: 70%;
 }
 
 .navbar-item {
   color: #fff;
-  font-size: 23px;
-  margin-right: 15px;
+  font-size: 22px;
+  margin-right: 30px;
   text-transform: uppercase;
 }
