--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,14 @@ header {
   z-index: -1;
 }
 
-.home-page {
+.main-content {
+  width: 90%;
+  height: 80%;
+}
+
+.home-page,
+.contact-page,
+.menu-page {
   color: #fff;
   font-size: 56px;
   text-transform: uppercase;
@@ -64,4 +71,30 @@ nav {
   font-size: 22px;
   margin-right: 30px;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+.title-section {
+  color: #fff;
+  font-size: 42px;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 3rem;
+}
+
+.contact-page {
+  background: #fff !important;
+}
+
+.contact-form {
+  width: 50%;
+}
+
+.form-control {
+  margin-bottom: 40px;
+}
+
+#input-submit {
+  padding: 10px 26px;
+  font-size: 20px;
 }
