--- a/src/style.css
+++ b/src/style.css
@@ -10,35 +10,6 @@ font-family: 'Roboto', sans-serif; */
 header {
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-}
-
-#content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url('./hero-image.jpg') center;
-  height: 100vh;
-  z-index: -1;
-}
-
-.main-content {
-  width: 90%;
-  height: 80%;
-}
-
-.home-page,
-.contact-page,
-.menu-page {
-  color: #fff;
-  font-size: 56px;
-  text-transform: uppercase;
-  text-align: center;
-  text-shadow: 3px 3px 15px #000;
-  letter-spacing: 0.1rem;
-  font-family: 'Anton', sans-serif;
-}
-
-header {
   position: absolute;
   top: 0;
   width: 100%;
@@ -68,27 +39,57 @@ nav {
 
 .navbar-item {
   color: #fff;
-  font-size: 22px;
+  font-size: 20px;
   margin-right: 30px;
   text-transform: uppercase;
   cursor: pointer;
 }
 
-.title-section {
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url('./hero-image.jpg') center;
+  height: 100vh;
+  z-index: -1;
+}
+
+.main-content {
+  width: 90%;
+  height: 80%;
+}
+
+.home-page {
   color: #fff;
+  font-size: 56px;
+  text-transform: uppercase;
+  text-align: center;
+  text-shadow: 3px 3px 15px #000;
+  letter-spacing: 0.1rem;
+  font-family: 'Anton', sans-serif;
+}
+
+.contact-page,
+.menu-page {
+  color: rgb(56, 51, 51);
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.1rem;
+  font-family: 'Anton', sans-serif;
+}
+
+.title-section {
   font-size: 42px;
-  font-weight: bold;
-  font-family: 'Roboto', sans-serif;
-  margin-bottom: 3rem;
+  margin: 1rem 0 3rem 0;
 }
 
 .contact-page {
   background: #fff !important;
 }
 
-.contact-form {
+/* .contact-form {
   width: 50%;
-}
+} */
 
 .form-control {
   margin-bottom: 40px;
@@ -97,4 +98,50 @@ nav {
 #input-submit {
   padding: 10px 26px;
   font-size: 20px;
+}
+
+@media (min-width: 768px) {
+  .contact-form {
+    width: 50%;
+  }
+}
+
+@media (max-width: 1022px) {
+  .deal {
+    max-width: 300px;
+    max-height: 300px;
+    margin-top: 2rem;
+    align-self: center;
+  }
+}
+
+@media (max-width: 425px) {
+  .title-section {
+    margin-bottom: 1rem;
+    font-size: 30px;
+  }
+
+  .navbar-item {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 581px) {
+  nav {
+    flex-direction: column;
+    height: 100px;
+  }
+
+  .nav-options {
+    justify-content: space-between;
+  }
+
+  .navbar-item {
+    margin-right: 0;
+  }
+
+  .logo {
+    max-width: 160px;
+    margin-top: 8px;
+  }
 }
