--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,3 @@
-/* font-family: 'Anton', sans-serif;
-font-family: 'Roboto', sans-serif; */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,7 +10,7 @@ header {
   position: absolute;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 nav {
@@ -49,7 +46,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('./hero-image.jpg') center;
+  background: url('./images/hero-image.jpg') center;
   height: 100vh;
   z-index: -1;
 }
@@ -71,25 +68,26 @@ nav {
 
 .contact-page,
 .menu-page {
-  color: rgb(56, 51, 51);
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.1rem;
   font-family: 'Anton', sans-serif;
 }
 
+.contact-page {
+  background: #fff !important;
+  color: #1c1b21;
+}
+
+.menu-page {
+  background: #1c1b21 !important;
+  color: #fff;
+}
+
 .title-section {
   font-size: 42px;
   margin: 1rem 0 3rem 0;
 }
-
-.contact-page {
-  background: #fff !important;
-}
-
-/* .contact-form {
-  width: 50%;
-} */
 
 .form-control {
   margin-bottom: 40px;
@@ -98,6 +96,11 @@ nav {
 #input-submit {
   padding: 10px 26px;
   font-size: 20px;
+}
+
+.card {
+  color: #1c1b21;
+  font-family: 'Roboto', sans-serif;
 }
 
 @media (min-width: 768px) {
