--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,11 @@ nav {
   cursor: pointer;
 }
 
+.navbar-item:hover {
+  color: #e4a356;
+  transform: scale(1.2);
+}
+
 #content {
   display: flex;
   justify-content: center;
@@ -64,6 +69,50 @@ nav {
   text-shadow: 3px 3px 15px #000;
   letter-spacing: 0.1rem;
   font-family: 'Anton', sans-serif;
+}
+
+.hero-content {
+  height: 50%;
+}
+
+.location-container {
+  position: relative;
+  display: inline-block;
+  width: 162px;
+}
+
+.dropdown-location {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 165px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-location a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-location a:hover {
+  background-color: #ddd;
+}
+
+.location-container:hover .dropdown-location {
+  display: block;
+}
+
+.location-btn {
+  font-size: 30px;
+  text-transform: uppercase;
+  padding: 1.1rem 1.5rem;
+}
+
+.location-container:hover .location-btn {
+  background-color: #b47537;
 }
 
 .contact-page,
